; ModuleID = '/home/carl/AnghaBench/git/extr_blame.c_prepare_lines.c'
source_filename = "/home/carl/AnghaBench/git/extr_blame.c_prepare_lines.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blame_scoreboard = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.blame_scoreboard*)* @prepare_lines to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prepare_lines(%struct.blame_scoreboard* %0) #0 {
  %2 = alloca %struct.blame_scoreboard*, align 8
  store %struct.blame_scoreboard* %0, %struct.blame_scoreboard** %2, align 8
  %3 = load %struct.blame_scoreboard*, %struct.blame_scoreboard** %2, align 8
  %4 = getelementptr inbounds %struct.blame_scoreboard, %struct.blame_scoreboard* %3, i32 0, i32 3
  %5 = load %struct.blame_scoreboard*, %struct.blame_scoreboard** %2, align 8
  %6 = getelementptr inbounds %struct.blame_scoreboard, %struct.blame_scoreboard* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.blame_scoreboard*, %struct.blame_scoreboard** %2, align 8
  %9 = getelementptr inbounds %struct.blame_scoreboard, %struct.blame_scoreboard* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @find_line_starts(i32* %4, i32 %7, i32 %10)
  %12 = load %struct.blame_scoreboard*, %struct.blame_scoreboard** %2, align 8
  %13 = getelementptr inbounds %struct.blame_scoreboard, %struct.blame_scoreboard* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = load %struct.blame_scoreboard*, %struct.blame_scoreboard** %2, align 8
  %15 = getelementptr inbounds %struct.blame_scoreboard, %struct.blame_scoreboard* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  ret i32 %16
}

declare dso_local i32 @find_line_starts(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
